src/codegen/tests/snapshots/cdec__codegen__tests__init__init_scale_with_list.snap
---
source: src/codegen/tests/init.rs
expression: codegen.module.to_string()
---
; ModuleID = '<string>'
source_filename = "<string>"
target triple = "x86_64-pc-linux-gnu"

@a = global i32 1

define i32 @main() {
entry:
  %a = alloca i32, align 4
  store i32 2, ptr %a, align 4
  %0 = load i32, ptr %a, align 4
  %1 = add i32 %0, 1
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  ret i32 0
}
