src/codegen/tests/snapshots/cdec__codegen__tests__init__init_union_without_biffield.snap
---
source: src/codegen/tests/init.rs
expression: codegen.builder.module.to_string()
---
; ModuleID = '<string>'
source_filename = "<string>"
target triple = "x86_64-pc-linux-gnu"

@a = global [3 x { i64 }] { { i32 } { i32 1 }, { i32 } { i32 2 }, { i32 } { i32 3 } }

define i32 @main() {
entry:
  %a = alloca i32, align 4
  %b = alloca float, align 4
  %c = alloca double, align 8
  %0 = load i32, ptr %a, align 4
  %1 = insertvalue { i32 } zeroinitializer, i32 %0, 0
  %x = alloca { i64 }, align 8
  store { i32 } %1, ptr %x, align 4
  ret i32 0
}
